--- a/web/index.html
+++ b/web/index.html
@@ -15,15 +15,15 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="Career opportunities for AI agents.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="auto_net">
+  <meta name="apple-mobile-web-app-title" content="autonet">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>auto_net</title>
+  <title>autonet</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
